fix detail display page and add scroll view to about page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,16 +69,27 @@
         <item>Lebih sering nongki di PMTS daripada di kost nya sendiri, kost berfungsi sebagai lemari pakaian</item>
         <item>KOLAKA pride, kurang tau orangnya karena ambil kelas karyawan</item>
         <item>Tiyan ade ke BTP naik MX KING</item>
-        <item>LORENG LIPSUMM</item>
-        <item>LORENG LIPSUMM</item>
-        <item>LOREMG LIPSUMM</item>
-        <item>LORENG LIPSUMM</item>
-        <item>LORENG LIPSUMM</item>
+        <item>Orang Paling jujur di dunia. Terdapat kitab suci yus sebagai pedoman kita sebagai pengikutnya
+            \n1.kalau tidak berarti iyo
+            \n2.kalau bilang i di kost berarti bukan di kosnya
+            \n3.kalau bilang otw berarti mandi
+            \n4.kalau nabilang dimana mko na kode ko kau dluan
+            \n5.kalau bilang i adama di lokasi bararti di kostnya i
+            \n6.kalau stay halal bearti kebalikan
+            \n7.kalau bilang i siapa kosong bearti jemput i
+            \n8.ome tv harus dia dlu yg buka
+            \n9.adakah beratrti ayomi
+            \n10.mau cuci baju berarti mau mi pulang
+        </item>
+        <item>Pintar pake Bahasa Bima, kalau menelpon juga sama orang dikampungnya pake Bahasa Bima</item>
+        <item>MABA di sirkel, walaupun dia terlihat kecil tetapi dalam namanya yang indah terdapat gelar AMD</item>
+        <item>Ketua tapi ndak na urus anak buahnya, kasihan Rahul terlantar</item>
+        <item>Ketua Tingkat A4 2021, asisten lab juga pokoknya gacor orangnya</item>
     </string-array>
 
     <string name="follow_me">Ikuti </string>
     <string name="social_media1">Facebook</string>
     <string name="social_media2">Instagram</string>
     <string name="social_media3">Tiktok</string>
-    <string name="detail_text">“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.”</string>
+
 </resources>
